<resources>
    <string name="application_name">PocketMine-MP for Android</string>
    <string name="activity_name">PocketMine-MP</string>
    <string name="server_handler">Server Management</string>
    <string name="server_online">Start Server</string>
    <string name="server_kill">Stop Server</string>
    <string name="install_bin">Installing PocketMine-MP for Android...</string>
    <string name="bin_installed">PocketMine-MP for Android was successfully installed</string>
    <string name="bin_error">Unable to install PocketMine for Android</string>
	<string name="about_app">About PocketMine-MP for Android</string>
	<string name="server_service">Server Service</string>
	<string name="download_service">Download Service</string>
	<string name="auSure">Are you sure?</string>
    <string name="abs_settings">Settings</string>
    <string name="abs_file_manager">File Manager</string>
    <string name="abs_about">About</string>
    <string name="sevc_service">PocketMine-MP Service</string>
    <string name="sevc_server_started">PocketMine-MP is now running</string>
    <string name="title_activity_log">Console</string>
    <string name="btn_console_send">Enter</string>
    <string name="title_activity_file_manager">File Manager</string>
    <string name="abs_force_close">Kill server</string>
    <string name="title_activity_version_manager">Version manager</string>
    <string name="abs_version_manager">Version manager</string>
    <string name="abs_properties_editor">Properties editor</string>
    <string name="abs_plugins">Plugins</string>
    <string name="thank_you">Thank you for downloading PocketMine-MP for Android!</string>
    <string name="before_anything">Now we will prepare everything for you.</string>
    <string name="preparing_string">Preparing...</string>
    <string name="title_activity_install">Welcome!</string>
    <string name="versionToInstall">Choose a version to install:</string>
    <string name="skip_version_sel">Skip this step</string>
    <string name="install_dev">Download development version</string>
    <string name="server_info">Server Status</string>
    <string name="stat_online">Online: Unknown</string>
    <string name="stat_ram">RAM Usage: Unknown</string>
    <string name="stat_download">Download: Unknown</string>
    <string name="stat_upload">Upload: Unknown</string>
    <string name="stat_tps">Ticks per second: Unknown</string>
    <string name="server_players">Players</string>
    <string name="player_kick">Kick</string>
    <string name="player_ban">Ban</string>
    <string name="player">Player</string>
    <string name="title_activity_config">Server properties editor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="config_name">Server name:</string>
    <string name="config_port">Server port:</string>
    <string name="config_gamemode">Gamemode:</string>
    <string name="gamemode_survival">Survival</string>
    <string name="gamemode_creative">Creative</string>
    <string name="gamemode_adventure">Adventure</string>
    <string name="gamemode_spectator">Spectator</string>
    <string name="config_players">Maximal players at once:</string>
    <string name="config_spawnprotect">Spawn protection:</string>
    <string name="config_spawnprotect_range">Range</string>
    <string name="config_whitelist">Whitelist:</string>
    <string name="config_whitelist_edit">Edit</string>
    <string name="config_desc">Server description:</string>
    <string name="config_usage">Send anonymous usage statistics</string>
    <string name="config_query">Enable Query (allows others to check server status)</string>
    <string name="config_rcon">Enable RCON (allows you to remotely control this server)</string>
    <string name="config_hardcore">Hardcore</string>
    <string name="config_motd">MOTD (Message of the day):</string>
    <string name="config_advanced">Advanced</string>
    <string name="config_save">Save</string>
    <string name="config_cancel">Cancel</string>
    <string name="config_rcon_password">RCON Password:</string>
    <string name="config_ip">Internal server IP:</string>
    <string name="config_ram">RAM:</string>
    <string name="config_achievements">Announce player achievements</string>
    <string name="config_distance">View distance:</string>
    <string name="config_distance_warning">Selected view distance is over 10. This settings can cause lags and would require lots of data to upload.</string>
    <string name="config_pvp">Enable PvP</string>
    <string name="config_difficulty">Difficulty:</string>
    <string name="difficulty_peaceful">Peaceful</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="config_level_name">World directory:</string>
    <string name="config_level_seed">World seed:</string>
    <string name="config_level_type">World type:</string>
    <string name="config_level_type_info">PocketMine level types: DEFAULT (Standard world), FLAT (Flat world). Level types can be added by plugins.</string>
    <string name="config_auto_save">Auto-save</string>
    <string name="config_fly">Allow use of Fly-in-Survival mods</string>
    <string name="conf_generator_setting">Generator Settings (for superflat world):</string>
    <string name="title_activity_whitelist">Whitelist</string>
    <string name="whitelist_add">Add</string>
    <string name="whitelist_remove">Remove</string>
    <string name="server_actions">Actions</string>
    <string name="action_op">Op</string>
    <string name="action_deop">Deop</string>
    <string name="stat_ip">IP Address: Unknown</string>
    <string name="title_activity_plugins">Plugins</string>
    <string name="plugin">Plugin</string>
    <string name="plugin_author">Author</string>
    <string name="plugins_error_nointernet">You have no internet connection.</string>
    <string name="plugins_error_general">An error occurred.</string>
    <string name="plugins_error_retry">Retry</string>
    <string name="plugins_error_cancel">Cancel</string>
    <string name="title_activity_search_results">Search results</string>
    <string name="title_activity_category">Category</string>
    <string name="title_activity_details">Plugin details</string>
    <string name="plugins_featured">We recommend</string>
    <string name="plugins_essential">Essential</string>
    <string name="more">See more...</string>
    <string name="plugins_popular">Most popular</string>
    <string name="plugin_description">Description</string>
    <string name="plugin_reviews">Reviews</string>
    <string name="plugin_rating">Rating:</string>
    <string name="review_author">Author</string>
    <string name="review_version">Version: Unknown</string>
    <string name="plugin_links">Links</string>
    <string name="title_activity_review">Reviews</string>
    <string name="review_author_response">Author\'s Response</string>
    <string name="link_sample">Sample</string>
    <string name="link_sample_url">http://google.pl/</string>
    <string name="title_activity_developer">DeveloperActivity</string>
    <string name="ad_unit_id">/23767766/PocketMine_Android</string>
    <string name="channel_stable">Stable</string>
    <string name="download">Download</string>
    <string name="choose_channel">Choose channel:</string>
    <string name="dummy_version">Version: Unknown (API version: Unknown)</string>
    <string name="dummy_date">1/1/1970</string>
    <string name="channel_beta">Beta</string>
    <string name="channel_dev">Development</string>
	<string name="software_genisys_latest">Genisys (Latest)</string>
	<string name="php_select_version">Please select PHP binary version</string>
	<string name="php_reinstall">Reinstall PHP binary</string>
	<string name="service_running">PocketMine-MP is running</string>
	<string name="tap_open">Tap here to open PocketMine-MP for Android.</string>
	<string name="config_custom">Custom...</string>
	<string name="config_max_ram">Select the maximal amount of RAM, which PocketMine can use.</string>
	<string name="done">Done</string>
	<string name="dev_local_edit">Edit local plugin list</string>
	<string name="dev_set_upd_zero">Edit local plugin list</string>
	<string name="start_unable">Unable to start server</string>
	<string name="start_success">Server is now running</string>
	<string name="unknown">Unknown</string>
	<string name="op_player">Op Player...</string>
	<string name="ip_address">IP Address</string>
	<string name="online">Online</string>
	<string name="ram_usage">RAM Usage</string>
	<string name="upload">Upload</string>
	<string name="tps">Ticks per second</string>
	<string name="kick_reason">Kick reason:</string>
	<string name="ban_player">Ban Player</string>
	<string name="ban_player_title">Ban Player...</string>
	<string name="ban_player_ip">Ban Player IP</string>
	<string name="developer">Developer</string>
	<string-array name="ban_player_modes">
		<item>@string/ban_player</item>
		<item>@string/ban_player_ip</item>
		<item>@android:string/cancel</item>
	</string-array>
	<string name="delete_previous">Deleting previous version...</string>
	<string name="extracting">"Extracting: "</string>
	<string name="error">Error</string>
	<string name="copied">Console text was copied to your\'s clipboard.</string>
	<string name="clear">Clear</string>
	<string name="version">Version</string>
	<string name="failed_load_version">Cannot load version list. Retrying in 5 seconds...</string>
	<string name="failed_load_version_2">Cannot load version list.</string>
	<string name="dl_this_version">Downloading this version...</string>
	<string name="ins_this_version">Installing this version...</string>
	<string name="please_wait">Please wait...</string>
	<string name="dl_this_version_failed">Failed to download this version.</string>
	<string name="whitelist_player">Whitelist player</string>
	<string name="whitelist_dialog">Write the player name, which you want to whitelist.</string>
	<string-array name="forum_categories">
		<item>"Featured"</item>, <item>"Best Plugins"</item>, <item>"Top Plugins"</item>,
		<item>"Top New Plugins"</item>, <item>"Recently updated"</item>
	</string-array>
	<string name="downloads">Downloads</string>
	<string name="downloading">Downloading...</string>
	<string name="stopserver_download">To download a plugin, stop the server first.</string>
	<string name="download_upper">DOWNLOAD</string>
	<string name="uninstall_upper">UNINSTALL</string>
	<string name="unknown_ext">Unknown (External site)</string>
	<string name="cur_rate">Current rating</string>
	<string name="size">Size</string>
	<string name="extension">Extension</string>
	<string name="support">Support</string>
	<string name="plugin_page">Plugin\'s page</string>
	<string name="ext_page">External page</string>
	<string name="plugin_download">Plugin download</string>
	<string name="dl_plugin_failed">Failed to download the plugin.</string>
	<string name="search_plugin">Search for plugins</string>
	<string name="enter_3_chr">Enter at least 3 characters.</string>
	<string name="no_match">No matches found.</string>
	<string-array name="forum_plugins">
		<item>"Categories"</item>, <item>"Home"</item>, <item>"Updates"</item>, <item>"Featured"</item>,
		<item>"Essential"</item>, <item>"Best Plugins"</item>, <item>"Top Plugins"</item>, <item>"Top New Plugins"</item>,
		<item>"Recently updated"</item>
	</string-array>
	<string-array name="forum_plugins_categories">
		<item>"Admin Tools"</item>, <item>"Anti-Griefing Tools"</item>,
		<item>"Chat Related"</item>, <item>"Developer Tools"</item>, <item>"Economy"</item>,
		<item>"Fun"</item>, <item>"General"</item>, <item>"Informational"</item>, <item>"Mechanics"</item>,
		<item>"Miscellaneous"</item>, <item>"Teleportation"</item>,
		<item>"World Editing and Management"</item>, <item>"World Generators"</item>
	</string-array>
	<string name="update">Update</string>
</resources>