<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<ProgressBar
		android:id="@+id/loadingBar"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="?android:attr/progressBarStyleHorizontal"
		android:indeterminate="true"/>

	<ScrollView
		android:id="@+id/scrollView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@+id/skipBtn">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/choose_channel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentRight="true"
				android:layout_alignParentTop="true"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:text="@string/choose_channel"/>

			<RelativeLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content">

				<TextView
					android:id="@+id/channel_stable"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentRight="true"
					android:background="#ccc"
					android:paddingBottom="16dip"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:paddingTop="16dip"
					android:text="@string/channel_stable"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<Button
					android:id="@+id/download_stable"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignBaseline="@+id/channel_stable"
					android:layout_alignParentRight="true"
					android:layout_marginRight="@dimen/activity_horizontal_margin"
					android:text="@string/download"/>

				<TextView
					android:id="@+id/stable_version"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_below="@+id/channel_stable"
					android:layout_marginTop="14dp"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:text="@string/dummy_version"/>

				<TextView
					android:id="@+id/stable_date"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentRight="true"
					android:layout_below="@+id/stable_version"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:text="@string/dummy_date"
					android:textColor="#555"/>

			</RelativeLayout>

			<RelativeLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content">

				<TextView
					android:id="@+id/channel_beta"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentRight="true"
					android:layout_marginTop="16dp"
					android:background="#ccc"
					android:paddingBottom="16dip"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:paddingTop="16dip"
					android:text="@string/channel_beta"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<Button
					android:id="@+id/download_beta"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignBaseline="@+id/channel_beta"
					android:layout_alignParentRight="true"
					android:layout_marginRight="@dimen/activity_horizontal_margin"
					android:text="@string/download"/>

				<TextView
					android:id="@+id/beta_version"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_below="@+id/channel_beta"
					android:layout_marginTop="14dp"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:text="@string/dummy_version"/>

				<TextView
					android:id="@+id/beta_date"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentRight="true"
					android:layout_below="@+id/beta_version"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:text="@string/dummy_date"
					android:textColor="#555"/>

			</RelativeLayout>

			<RelativeLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content">

				<TextView
					android:id="@+id/channel_dev"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentRight="true"
					android:layout_marginTop="16dp"
					android:background="#ccc"
					android:paddingBottom="16dip"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:paddingTop="16dip"
					android:text="@string/channel_dev"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<Button
					android:id="@+id/download_dev"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignBaseline="@+id/channel_dev"
					android:layout_alignParentRight="true"
					android:layout_marginRight="@dimen/activity_horizontal_margin"
					android:text="@string/download"/>

				<TextView
					android:id="@+id/dev_version"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_below="@+id/channel_dev"
					android:layout_marginTop="14dp"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:text="@string/dummy_version"/>

				<TextView
					android:id="@+id/dev_date"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentRight="true"
					android:layout_below="@+id/dev_version"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:text="@string/dummy_date"
					android:textColor="#555"/>

			</RelativeLayout>

			<RelativeLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content">

				<TextView
					android:id="@+id/software_genisys"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentRight="true"
					android:layout_marginTop="16dp"
					android:background="#ccc"
					android:paddingBottom="16dip"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:paddingTop="16dip"
					android:text="@string/software_genisys_latest"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<Button
					android:id="@+id/download_genisys"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignBaseline="@+id/software_genisys"
					android:layout_alignParentRight="true"
					android:layout_marginRight="@dimen/activity_horizontal_margin"
					android:text="@string/download"/>

				<TextView
					android:id="@+id/genisys_version"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_below="@+id/software_genisys"
					android:layout_marginTop="14dp"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:text="@string/dummy_version"/>

				<TextView
					android:id="@+id/genisys_date"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentRight="true"
					android:layout_below="@+id/genisys_version"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:text="@string/dummy_date"
					android:textColor="#555"/>

			</RelativeLayout>

			<RelativeLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content">

				<TextView
					android:id="@+id/software_clearsky"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentRight="true"
					android:layout_marginTop="16dp"
					android:background="#ccc"
					android:paddingBottom="16dip"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:paddingTop="16dip"
					android:text="@string/software_clearsky_latest"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<Button
					android:id="@+id/download_clearsky"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignBaseline="@+id/software_clearsky"
					android:layout_alignParentRight="true"
					android:layout_marginRight="@dimen/activity_horizontal_margin"
					android:text="@string/download"/>

				<TextView
					android:id="@+id/clearsky_version"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_below="@+id/software_clearsky"
					android:layout_marginTop="14dp"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:text="@string/dummy_version"/>

				<TextView
					android:id="@+id/clearsky_date"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentRight="true"
					android:layout_below="@+id/clearsky_version"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:text="@string/dummy_date"
					android:textColor="#555"/>

			</RelativeLayout>

		</LinearLayout>

	</ScrollView>

	<Button
		android:id="@+id/skipBtn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:text="@string/skip_version_sel"
		android:visibility="gone"/>

</LinearLayout>

